[#116] feat: '댓글 많은 순' 정렬 기능 추가
- `IssueFilterRequest`에 `commentCount`를 새로운 정렬 파라미터로 추가했습니다.
- `IssueService`에서 `commentCount` 정렬 요청 시, 비효율적인 서브쿼리를 유발할 수 있는 `comments.size()` 대신, `LEFT JOIN`과 `GROUP BY`를 사용하는 **최적화된 QueryDSL 쿼리**를 구현했습니다. 이를 통해 데이터가 증가하더라도 안정적인 정렬 성능을 보장합니다.